<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="no.woact.blemar17.ultimatetictactoe.PlayerWonViewFragment"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imgvPlayerWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/txtvPlayerWon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player"
        android:textAlignment="center"
        android:textColor="#FFFF00"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgvPlayerWon"
        app:layout_constraintStart_toStartOf="@+id/imgvPlayerWon"
        app:layout_constraintTop_toBottomOf="@+id/imgvPlayerWon" />

    <Button
        android:id="@+id/btnReplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#000000"
        android:fontFamily="monospace"
        android:text="@string/button_replay"
        android:textColor="#0088cc"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btnMainMenu"
        app:layout_constraintStart_toStartOf="@+id/btnMainMenu"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#000000"
        android:fontFamily="monospace"
        android:text="@string/button_back_to_menu"
        android:textColor="#0088cc"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReplay" />

    <TextView
        android:id="@+id/txtviewEndTime"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="00:00:0"
        android:textColor="#FFFF00"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtviewTime" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/textview_player_won"
        android:textColor="#FFFF00"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imgvPlayerWon"
        app:layout_constraintStart_toStartOf="@+id/imgvPlayerWon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtviewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_time"
        android:textColor="#FFFF00"
        android:fontFamily="monospace"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtviewEndTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</android.support.constraint.ConstraintLayout>
